# cosmic-applet-asdcontrol

./: Cargo.toml  README.md  cosmic-applet-asdcontrol.desktop  install-udev-rules.sh  install.sh  install.sh.old
.github/workflows/: ci.yml  release.yml
src/: asdcontrol_bind.rs  check_envs.rs  hiddev.rs  main.rs
