[package]
name = "cosmic-applet-asdcontrol"
version = "0.1.0"
edition = "2021"

[dependencies]
libcosmic = { git = "https://github.com/pop-os/libcosmic", default-features = false, features = ["applet", "tokio"] }
tokio = { version = "1", features = ["macros", "time", "rt-multi-thread"] }
libc = "0.2"

[profile.release]
strip = true
lto = true
